# rnaseq

./: .gitignore  README.md  pyproject.toml
src/rnaseq/: DESeq2.Rmd  count.py  dega.py  fastp.py  feature_count.py  init.py  main.py  manifest.csv  pipeline.py  rnaseq.py  star.py  tools.py  utility.py
src/rnaseq.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
